Failure of ::realloc() should be handled correctly in adlc/forms.cpp

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 13
    • Affects Version/s: 10, 11, 12, 13
    • Component/s: hotspot
    • b05

      In a few places of hotspot a possible failure of realloc isn't handled correctly: Either the return value isn't checked for NULL, of the original memory isn't freed, or both.

      http://mail.openjdk.java.net/pipermail/net-dev/2019-January/012055.html

      share/adlc/forms.cpp: if (_cur == _max) _names =(const char**)realloc(_names,(_max *=2)*sizeof(char*));

            Assignee:
            Tobias Hartmann
            Reporter:
            Ivan Gerasimov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: