8217291: Failure of ::realloc() should be handled correctly in adlc/forms.cpp

Handle reallocation failures in adlc.

Reviewed-by: kvn, neliasso