src/hotspot/share/adlc/arena.hpp
@@ -26,6 +26,7 @@
 #define SHARE_ADLC_ARENA_HPP
 
 void* AllocateHeap(size_t size);
+void* ReAllocateHeap(void* old_ptr, size_t size);
 
 // All classes in adlc may be derived
 // from one of the following allocation classes:
