src/hotspot/share/adlc/forms.cpp
@@ -48,7 +48,9 @@ NameList::~NameList() {
 }
 
 void   NameList::addName(const char *name) {
-  if (_cur == _max) _names =(const char**)realloc(_names,(_max *=2)*sizeof(char*));
+  if (_cur == _max) {
+    _names = (const char**) ReAllocateHeap(_names, (_max *=2)*sizeof(char*));
+  }
   _names[_cur++] = name;
 }
 
